 - Fixed bug in StatusFilter, method dohandle() renamed to doHandle().
 - Removed getStatusCode() and getReasonPhrase() methods in ServletCall hiding the actual value set. Reported by Sean Landis.
 
[API breaking changes]
 - Moved Atom, FreeMarker and FileUpload extensions to org.restlet.ext package.
 
[Other changes] 
 - Reorganized Javadocs into three parts: Restlet API, Restlet Extensions, Noelios Restlet Engine.
 - Added JSON library as an external plugin project. See http://www.json.org
 - Added org.restlet.ext.json extension to manipulate JSON representations.
 - Added MediaType.APPLICATION_JSON and added entry for "*.json" in common extensions.
 - Now adds the mandatory "Date" header to all responses.
 - Added modifiable "identifier" and "secret" properties to ChallengeResponse, in addition to the raw "credentials" property.
 - Added support for Amazon Web Services authentication scheme for HTTP client requests. Added ChallengeScheme.HTTP_AWS constant and
   a sample example at com.noelios.restlet.example.misc.AwsTest. Suggested by Mikkel Jensen.
 - StatusService now has its "overwrite" property set to "false" by default.
 
1.0 beta 19 (2006-10-23)
[Bugs fixed]
 - Fixed issue with error status preventing the setting of response headers with Servlet containers like Tomcat. Report and solution by Evan DiBiase.
 - Completed support for content streaming in the HTTP client connector extension. Issue reported by Mikkel Jensen.
 - Fixed bug in ParameterList.getFirstValue(String, boolean) ignoring the "ignoreCase" parameter.
 - Fixed issue with ServerServlet preventing the returning of an output representation with an error status code. Reported by Sean Landis.
 - Fixed incomplete plugin descriptors for some extensions.
 - Added workaround for JDK's bug #6472250 when using the fixed length mode with the HTTP client.
 - Fixed bug in FreeMarker's TemplateRepresentation closing the output stream too early, causing Simple HTTP server to fail. Reported by Zohar Melamed.