@@ -1,3 +1,3 @@
 #Build Number for ANT. Do not edit!
-#Fri Oct 27 18:54:38 CEST 2006
-build.number=392
+#Sun Oct 29 11:28:06 CET 2006
+build.number=393
