@@ -1,6 +1,6 @@
 <HTML>
 <BODY>
-Implementation of the org.restlet.connector package.
+Implementation of HTTP Connectors.
 <p>
 @since 1.0
 @see <a href="http://www.ics.uci.edu/~fielding/pubs/dissertation/software_arch.htm">REST dissertation by Roy T. Fielding</a>
