@@ -1,0 +1,8 @@
+<HTML>
+<BODY>
+Implementation of local Clients.
+<p>
+@since 1.0
+@see <a href="http://www.restlet.org">Restlet project</a>
+</BODY>
+</HTML>
